--- a/pythonproject/ca2/templates/employee.html
+++ b/pythonproject/ca2/templates/employee.html
@@ -13,57 +13,48 @@
     <link href="https://fonts.googleapis.com/css2?family=Audiowide&family=Open+Sans&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" defer href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+    <script type="text/javascript">
+      $(document).ready(function () {
+        $(document).on('click', '#save-data', function () {
+          $.ajax({
+            type: 'post',
+            url: '/create-employee',
+            data: $('form').serialize(),
+            success: function (response) {
+              if (response === 'Success') {
+                alert ('Data Successfully Inserted')
+                location.reload();
+              }
+            }
+          })
+        });
+
+        $(document).on('click', '.delete-data', function () {
+          if (confirm('Do you really wish to delete the data?')) {
+            $.ajax({
+              type: 'post',
+              url: '/delete-employee',
+              data: {
+                emp_id: $(this).attr('emp_id')
+              },
+              success: function (response) {
+                if (response === 'Success') {
+                  alert ('Data Successfully Deleted')
+                  location.reload();
+                }
+              }
+            });
+          }
+        });
+      }); 
+    </script>
   </head>
   <body>
     <!-- Header starts -->
-      <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="javascript:;">Mexican Restaurant</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarText">
-            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="./dashboard.html">Dashboard</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active" href="./employee.html">Employee</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="./customers.html">Customer</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="./branch.html">Branch</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="./supplier.html">Supplier</a>
-              </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Menu
-                </a>
-                <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                  <li><a class="dropdown-item" href="./menu.html">Menu</a></li>
-                  <li><a class="dropdown-item" href="./product.html">Product</a></li>
-                </ul>
-              </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownTransactionLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Transaction
-                </a>
-                <ul class="dropdown-menu" aria-labelledby="navbarDropdownTransactionLink">
-                  <li><a class="dropdown-item" href="./order.html">Order</a></li>
-                  <li><a class="dropdown-item" href="./payment.html">Payment</a></li>
-                  <li><a class="dropdown-item" href="./transaction.html">Transaction</a></li>
-                </ul>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </nav>
+      {% include 'header/header.html' %}
     <!-- Header ends -->
-
+    
     <!-- Main Container starts -->
       <div class="container">
         <div class="row mt-3">
@@ -87,19 +78,23 @@
                   <th>Salary</th>
                   <th>Permission</th>
                   <th>Address</th>
+                  <th>Action</th>
                 </tr>
-                <tr>
-                  <td></td>
-                  <td></td>
-                  <td></td>
-                  <td></td>
-                  <td></td>
-                  <td></td>
-                  <td></td>
-                  <td></td>
-                  <td></td>
-                  <td></td>
-                </tr>
+                {% for row in employee %}
+                  <tr>
+                    <td>{{ row[0] }}</td>
+                    <td>{{ row[1] }}</td>
+                    <td>{{ row[2] }}</td>
+                    <td>{{ row[4] }}</td>
+                    <td>{{ row[5] }}</td>
+                    <td>{{ row[6] }}</td>
+                    <td>{{ row[7] }}</td>
+                    <td>{{ row[8] }}</td>
+                    <td>{{ row[9] }}</td>
+                    <td>{{ row[3] }}</td>
+                    <td><a href="javascript:;" emp_id="{{ row[0] }}" class="text-danger delete-data">Delete</a></td>
+                  </tr>
+                {% endfor %}
               </table>
             </div>
           </div>
@@ -116,57 +111,65 @@
               <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
-              <div class="row">
-                <div class="col-sm-6">
-                  <div class="mb-3">
-                    <label class="form-label">Branch</label>
-                    <select class="form-select" aria-label="Default select example">
-                      <option selected>Branch</option>
-                      <option value="1">One</option>
-                      <option value="2">Two</option>
-                      <option value="3">Three</option>
-                    </select>
+              <form name="employee-form">
+                <div class="row">
+                  <div class="col-sm-6">
+                    <div class="mb-3">
+                      <label class="form-label">Branch</label>
+                      <select class="form-select" name="branch_id" aria-label="Default select example">
+                        <option selected>Branch</option>
+                        <option value="12345">Unit 1</option>
+                        <option value="11236">Unit 2</option>
+                        <option value="44299">Unit 3</option>
+                        <option value="55679">Unit 4</option>
+                        <option value="33177">Unit 5</option>
+                      </select> 
+                    </div>
+                    <div class="mb-3">
+                      <label class="form-label">Name</label>
+                      <input type="text" class="form-control" name="name">
+                    </div>
+                    <div class="mb-3">
+                      <label class="form-label">Phone</label>
+                      <input type="text" class="form-control" name="phone">
+                    </div>
+                    <div class="mb-3">
+                      <label class="form-label">PPS</label>
+                      <input type="text" class="form-control" name="pps">
+                    </div>
+                    <div class="mb-3">
+                      <label class="form-label">Address</label>
+                      <textarea class="form-control" rows="3" name="address"></textarea>
+                    </div>
                   </div>
-                  <div class="mb-3">
-                    <label class="form-label">Name</label>
-                    <input type="text" class="form-control">
-                  </div>
-                  <div class="mb-3">
-                    <label class="form-label">Phone</label>
-                    <input type="text" class="form-control">
-                  </div>
-                  <div class="mb-3">
-                    <label class="form-label">PPS</label>
-                    <input type="text" class="form-control">
-                  </div>
-                  <div class="mb-3">
-                    <label class="form-label">Address</label>
-                    <textarea class="form-control" rows="3"></textarea>
+                  <div class="col-sm-6">
+                    <div class="mb-3">
+                      <label class="form-label">Employee ID</label>
+                      <input type="text" class="form-control" name="emp_id">
+                    </div>
+                    <div class="mb-3">
+                      <label class="form-label">Email</label>
+                      <input type="text" class="form-control" name="email_id">
+                    </div>
+                    <div class="mb-3">
+                      <label class="form-label">Position</label>
+                      <input type="text" class="form-control" name="position">
+                    </div>
+                    <div class="mb-3">
+                      <label class="form-label">Monthly Salary</label>
+                      <input type="text" class="form-control" name="monthly_salary">
+                    </div>
+                    <div class="mb-3">
+                      <label class="form-label">Permission Level</label>
+                      <input type="text" class="form-control" name="permission_level">
+                    </div>
                   </div>
                 </div>
-                <div class="col-sm-6">
-                  <div class="mb-3">
-                    <label class="form-label">Email</label>
-                    <input type="text" class="form-control">
-                  </div>
-                  <div class="mb-3">
-                    <label class="form-label">Position</label>
-                    <input type="text" class="form-control">
-                  </div>
-                  <div class="mb-3">
-                    <label class="form-label">Monthly Salary</label>
-                    <input type="text" class="form-control">
-                  </div>
-                  <div class="mb-3">
-                    <label class="form-label">Permission Level</label>
-                    <input type="text" class="form-control">
-                  </div>
-                </div>
-              </div>
+              </form>
             </div>
             <div class="modal-footer">
               <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-              <button type="button" class="btn btn-primary">Save changes</button>
+              <button type="button" class="btn btn-primary" id="save-data">Save changes</button>
             </div>
           </div>
         </div>
