--- a/pythonproject/ca2/templates/supplier.html
+++ b/pythonproject/ca2/templates/supplier.html
@@ -13,55 +13,46 @@
     <link href="https://fonts.googleapis.com/css2?family=Audiowide&family=Open+Sans&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" defer href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+    <script type="text/javascript">
+      $(document).ready(function () {
+        $(document).on('click', '#save-data', function () {
+          $.ajax({
+            type: 'post',
+            url: '/create-supplier',
+            data: $('form').serialize(),
+            success: function (response) {
+              if (response === 'Success') {
+                alert ('Data Successfully Inserted')
+                location.reload();
+              }
+            }
+          })
+        });
+
+        $(document).on('click', '.delete-data', function () {
+          if (confirm('Do you really wish to delete the data?')) {
+            $.ajax({
+              type: 'post',
+              url: '/delete-supplier',
+              data: {
+                supplier_id: $(this).attr('supplier_id')
+              },
+              success: function (response) {
+                if (response === 'Success') {
+                  alert ('Data Successfully Deleted')
+                  location.reload();
+                }
+              }
+            });
+          }
+        });
+      }); 
+    </script>
   </head>
   <body>
     <!-- Header starts -->
-      <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="javascript:;">Mexican Restaurant</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarText">
-            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="./dashboard.html">Dashboard</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="./employee.html">Employee</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="./customers.html">Customer</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="./branch.html">Branch</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active" href="./supplier.html">Supplier</a>
-              </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Menu
-                </a>
-                <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                  <li><a class="dropdown-item" href="./menu.html">Menu</a></li>
-                  <li><a class="dropdown-item" href="./product.html">Product</a></li>
-                </ul>
-              </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownTransactionLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Transaction
-                </a>
-                <ul class="dropdown-menu" aria-labelledby="navbarDropdownTransactionLink">
-                  <li><a class="dropdown-item" href="./order.html">Order</a></li>
-                  <li><a class="dropdown-item" href="./payment.html">Payment</a></li>
-                  <li><a class="dropdown-item" href="./transaction.html">Transaction</a></li>
-                </ul>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </nav>
+      {% include 'header/header.html' %}
     <!-- Header ends -->
 
     <!-- Main Container starts -->
@@ -77,21 +68,27 @@
             <div class="responsive">
               <table class="table table-striped">
                 <tr>
-                  <th></th>
-                  <th></th>
-                  <th></th>
-                  <th></th>
-                  <th></th>
-                  <th></th>
+                  <th>#</th>
+                  <th>Type</th>
+                  <th>Name</th>
+                  <th>Address</th>
+                  <th>City</th>
+                  <th>Sales Rep</th>
+                  <th>Contact Number</th>
+                  <th>Action</th>
                 </tr>
-                <tr>
-                  <td></td>
-                  <td></td>
-                  <td></td>
-                  <td></td>
-                  <td></td>
-                  <td></td>
-                </tr>
+                {% for row in supplier %}
+                  <tr>
+                    <td>{{ row[0] }}</td>
+                    <td>{{ row[1] }}</td>
+                    <td>{{ row[2] }}</td>
+                    <td>{{ row[3] }}</td>
+                    <td>{{ row[4] }}</td>
+                    <td>{{ row[5] }}</td>
+                    <td>{{ row[6] }}</td>
+                    <td><a href="javascript:;" supplier_id="{{ row[0] }}" class="text-danger delete-data">Delete</a></td>
+                  </tr>
+                {% endfor %}
               </table>
             </div>
           </div>
